--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,280 @@
     --superDarkBlueGray: hsl(206, 14%, 10%);
     --mediumGray: hsl(5, 7%, 67%);
     --lightGray: hsl(0, 0%, 83%);
-    --superLightGray: hsl(330, 9%, 96%);
+    --ligthLightGray: hsl(330, 9%, 96%);
     --white: hsl(0, 0%, 100%);
     --darkBoard: hsl(359, 87%, 21%);
     --boardRed: hsl(358, 76%, 36%);
     --red: hsl(359, 77%, 41%);
     --lightyRed: hsl(359, 77%, 56%);
+}
+
+/* -----------------------------------------resets-------------------------------------------- */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* -----------------------------------------clases-------------------------------------------- */
+
+.displayCenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+/* ------------------------------------------------------------------------------------------- */
+
+body{
+    font-family:Arial, Helvetica, sans-serif ;
+    max-width: 1200px;
+    background-color: var(--boardRed);
+    margin: 0px auto;
+    height: 100vh;
+}
+
+body>main{
+    position: relative;
+    margin: 5vh auto;
+    width: 90%;
+    height: auto;
+    min-height: 90vh;
+    display: flex;
+}
+
+/* ---------------------------*/
+/* SECTION SEARCHPRODUCTS */
+
+.searchProducts{
+    width: 15%;
+    min-width: 130px;
+    background-color: var(--lightGray);
+}
+
+/* SEARCHPRODUCTS FORM */
+
+form{
+    width: 80%;
+    margin: 70px auto 20px;
+    position: relative;
+}
+
+form input{
+    width: 100%;
+    
+}
+
+form label{
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    font-size: .6rem;
+}
+
+
+/* ---------------------------*/
+/* SECTION DISPLAYPRODUCTS*/
+
+.displayProducts{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background-color: var(--ligthLightGray);
+}
+
+/* DISPLAYPRODUCTS CART */
+
+.cart{
+    height: auto;
+    padding: 10px;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.cart img{
+    width: 30px;
+}
+
+.cart span{
+    color: var(--ligthLightGray);
+    font-size: .8rem;
+    background-color: var(--boardRed);
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    margin-bottom: 5px;
+}
+
+.menu img{
+    display: none;
+}
+
+/* DISPLAYPRODUCTS ARTICLES*/
+
+.displayProducts .bagsCarts{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.bagsCarts article{
+    width: 30%;
+    min-width: 180px;
+    height: auto;
+    margin: 20px auto;
+    border-radius: 5px;
+    background-color: var(--white);
+    transition: all .5s;
+}
+
+.bagsCarts article header{
+  text-align: center;
+  transition: all .5s;
+}
+
+.bagsCarts article h2{
+    font-size: 1rem;
+}
+
+.bagsCarts article main{
+    width: 100%;
+    height: 150px;
+    position: relative;
+    margin: 0;
+    
+}
+
+
+.bagsCarts article main div{
+    width: 100%;
+}
+
+.bagsCarts article main img{
+    width: 20px;
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    
+}
+
+.redHeart{
+    display: none;
+   
+}
+
+.bagsCarts article main img:first-child{
+    display: block;
+    height: auto;
+    max-height: 150px;
+    width: auto;
+    max-width: 100%;
+    position: static;
+}
+
+.bagsCarts article h3{
+    margin-top: 10px;
+    font-size: .8rem;
+}
+
+.bagsCarts article h4{
+    font-size: .6rem;
+    color: var(--red);
+    margin: 7px 0;
+}
+
+.bagsCarts article footer p{
+    font-size: .6rem;
+    opacity: 0;
+    text-align: center;
+    transition: all .5s;
+}
+
+.bagsCarts article button{
+    width: 110px;
+    display: block;
+    margin: 20px auto;
+    background-color: var(--boardRed);
+    color: var(--white);
+    border: none;
+    padding: 3px;
+    border-radius: 5px;
+    transition: all .5s;
+}
+
+
+/* -------------------------------hoovers------------------------------------------ */
+
+.bagsCarts article:hover{
+    box-shadow: 2px 2px 7px var(--lightGray), -2px -2px 7px var(--lightGray);
+    transform: translateY(-1px);
+}
+
+.bagsCarts article:hover header{
+    border-radius: 5px;
+    padding: 3px;
+    background-color: var(--lightGray);
+    color: var(--boardRed);
+}
+
+.bagsCarts article:hover p{
+    opacity: 1;
+}
+
+.bagsCarts article button:hover{
+    background-color: var(--white);
+    color: var(--boardRed);
+    border: solid 2px var(--red);
+    transform: scale(1.1);
+    box-shadow: 2px 2px 2px var(--lightGray);
+}
+
+
+/* ----------------------------------------medias-------------------------------------- */
+
+@media (max-width: 380px){
+    
+    /* SECTION SEARCHPRODUCTS */
+    .searchProducts{
+        min-width: 30px;
+        position: sticky;
+        top: 0;
+        left: 0;
+    }
+
+
+    .menu img{
+        display: block;
+        width: 15px;
+        margin: 15px auto;
+    }
+
+    form{
+        display: none;
+    }
+
+
+}
+
+
+/* ------------------------------------clases js-------------------------------------- */
+
+.sectionSearch{ 
+  min-width: 70vw;  
+  width: 70vw;
+}
+
+.displayBlock{
+    display: block;
+}
+
+.displayNone{
+    display: none;
 }
