--- a/css/styles.css
+++ b/css/styles.css
@@ -154,9 +154,10 @@ form label {
 
 .bagsCards article h2 {
     font-size: 1rem;
+    margin: 5px;
 }
 
-.bagsCards article main {
+.bagsCards article > main {
     width: 100%;
     height: 150px;
     position: relative;
@@ -165,13 +166,16 @@ form label {
 
 .bagsCards article main div {
     width: 100%;
+    
 }
 
-.bagsCards article main img {
+.heart,
+.redHeart {
     width: 20px;
     position: absolute;
-    top: 20px;
+    top: 10px;
     right: 10px;
+    z-index: 1;
 }
 
 .redHeart {
@@ -184,6 +188,7 @@ form label {
     max-height: 150px;
     width: auto;
     max-width: 100%;
+    margin: 10px auto;
     position: static;
 }
 
@@ -196,6 +201,10 @@ form label {
     font-size: 0.6rem;
     color: var(--red);
     margin: 7px 0;
+}
+
+.bagsCards article footer > div{
+    height: 30px;
 }
 
 .bagsCards article footer p {
@@ -222,6 +231,7 @@ form label {
 .bagsCards article:hover {
     box-shadow: 2px 2px 7px var(--lightGray), -2px -2px 7px var(--lightGray);
     transform: translateY(-1px);
+    margin: 16px auto;
 }
 
 .bagsCards article:hover header {
@@ -233,6 +243,7 @@ form label {
 
 .bagsCards article:hover p {
     opacity: 1;
+    max-height: 100%;
 }
 
 .bagsCards article button:hover {
