--- a/css/styles.css
+++ b/css/styles.css
@@ -154,12 +154,12 @@ form label {
 
 .bagsCards article h2 {
     font-size: 1rem;
-    margin: 5px;
+    padding: 5px;
 }
 
 .bagsCards article > main {
     width: 100%;
-    height: 150px;
+    height: 170px;
     position: relative;
     margin: 0;
 }
@@ -188,23 +188,25 @@ form label {
     max-height: 150px;
     width: auto;
     max-width: 100%;
-    margin: 10px auto;
+    margin: 20px auto;
     position: static;
 }
 
 .bagsCards article h3 {
-    margin-top: 10px;
+    margin: 10px 0 0 15px;
     font-size: 0.8rem;
 }
 
 .bagsCards article h4 {
     font-size: 0.6rem;
     color: var(--red);
-    margin: 7px 0;
+    margin: 7px 0 10px 15px;
+    height: 10px;
 }
 
 .bagsCards article footer > div{
-    height: 30px;
+    height: 20px;
+    padding: 0 15px;
 }
 
 .bagsCards article footer p {
@@ -285,7 +287,7 @@ form label {
     left: 0;
     height: 100%;
     width: 70vw;
-    z-index: 1;
+    z-index: 2;
 }
 
 .displayBlock {
@@ -294,4 +296,22 @@ form label {
 
 .displayNone {
     display: none;
+}
+
+.brandButton{
+    display: block;
+    font-size: .5rem;
+    background-color: var(--boardRed);
+    color: var(--ligthLightGray);
+    padding: 5px;
+    width: 80%;
+    margin: 7px auto;
+    border: var(--ligthLightGray);
+    transition: all .5s;
+}
+
+.brandButton:hover{
+    background-color: var(--white);
+    color: var(--boardRed);
+    border: solid 1px var(--red);
 }
