--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     --boardRed: hsl(358, 76%, 36%);
     --red: hsl(359, 77%, 41%);
     --lightyRed: hsl(359, 77%, 56%);
+    --green: green;
 }
 
 /* -----------------------------------------resets-------------------------------------------- */
@@ -68,19 +69,22 @@ body > main {
 }
 
 /* SEARCHPRODUCTS FORM */
+.searchProducts{
+    transition: all .5s;
+}
 
-form {
+.searchProducts form {
     width: 80%;
     margin: 70px auto 20px;
     position: relative;
 }
 
-form input {
+.searchProducts form input {
     width: 100%;
     padding: 2px;
 }
 
-form label {
+.searchProducts form label {
     position: absolute;
     top: 3px;
     right: 2px;
@@ -96,29 +100,77 @@ form label {
     min-height: 90vh;
     padding: 20px;
     background-color: var(--ligthLightGray);
+    
 }
+
+/* DISPLAYPRODUCTS prices */
+
+.displayProducts .nav{
+    height: auto;
+    justify-content: space-between;
+    
+}
+
+.prices{
+    width: 90%;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+
+.prices button{
+    height: 45px;
+    margin: 5px 10px;
+    padding: 7px;
+    color: var(--green);
+    font-weight: bolder;
+    border: 2px solid var(--green);
+    border-radius: 5px;
+    transition: all .5s;
+}
+
+.prices form{
+    width: 30%;
+    height: 45px;
+    margin: 5px 10px;
+    align-self: flex-start;
+}
+
+.prices form label{
+    width: 100%;
+    margin-bottom: 10px;
+    color: var(--green);
+    font-weight: bolder;
+}
+
+.prices form select{
+    padding: 2px;
+    color: var(--green);
+}
+
 
 /* DISPLAYPRODUCTS card */
 
 .cart {
     height: auto;
     padding: 10px;
-    width: 100%;
+    width: 15%;
     justify-content: flex-end;
     align-items: flex-end;
 }
 
 .cart img {
-    width: 30px;
+    width: 60px;
 }
 
 .cart span {
     color: var(--ligthLightGray);
-    font-size: 0.8rem;
+    font-size: 1rem;
     background-color: var(--boardRed);
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
     margin-bottom: 5px;
 }
 
@@ -221,20 +273,25 @@ form label {
     width: 110px;
     display: block;
     margin: 20px auto;
-    background-color: var(--boardRed);
+    background-color: var(--green);
     color: var(--white);
     border: none;
-    padding: 3px;
+    padding: 5px;
     border-radius: 5px;
     transition: all 0.5s;
 }
 
 /* -------------------------------hoovers------------------------------------------ */
+.prices button:hover{
+    cursor: pointer;
+    color: var(--red);
+    border-color: var(--red);
+    transform: scale(1.1);
+}
 
 .bagsCards article:hover {
     box-shadow: 2px 2px 7px var(--lightGray), -2px -2px 7px var(--lightGray);
-    transform: translateY(-1px);
-    margin: 16px auto;
+    margin: 15px auto;
 }
 
 .bagsCards article:hover header {
@@ -253,9 +310,10 @@ form label {
     background-color: var(--white);
     color: var(--boardRed);
     border: solid 2px var(--red);
-    transform: scale(1.1);
     box-shadow: 2px 2px 2px var(--lightGray);
 }
+
+
 
 /* ----------------------------------------medias-------------------------------------- */
 
@@ -274,7 +332,8 @@ form label {
         margin: 15px auto;
     }
 
-    form {
+    form, 
+    .brands {
         display: none;
     }
 }
@@ -301,7 +360,7 @@ form label {
 
 .brandButton{
     display: block;
-    font-size: .5rem;
+    font-size: .8rem;
     background-color: var(--boardRed);
     color: var(--ligthLightGray);
     padding: 5px;
@@ -324,4 +383,15 @@ form label {
     color: var(--Black);
     padding: 20px; 
     text-align: center;
+}
+
+.brandName{
+    color: var(--red);
+    font-weight: bolder;
+}
+
+.stock{
+    font-size: .8rem;
+    color: var(--superDarkBlueGray);
+    margin-bottom: 5px;
 }
